...
            Button {
                viewModel.showDeleteAlert = true
            } label: {
                CustomButtonLabel(message: "Supprimer mon compte", color: .red, isSelected: false)
            }
            .disabled(viewModel.isLoading)
            .accessibilityIdentifier("button.deleteUserAccount")
        }
    }
}

#Preview("Default") {
    UserProfileActionsView(viewModel: PreviewHelpers.makeUserProfileViewModel())
...
